<resources>

    <string name="app_name">NotificationDemo</string>
    <string name="simple_notification">Simple</string>
    <string name="open_activity">Open Activity</string>
    <string name="two_icon">Two Icon</string>
    <string name="big_picture">Big picture</string>
    <string name="big_text">Big text</string>
    <string name="chat_text">Chat text</string>
    <string name="big_text_button">Big Text with Button</string>
    <string name="custom_simple">Custom Simple</string>
    <string name="custom_big">Custom Big</string>

</resources>
